[package]
name = "sequencer-feed-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
ethers = "2.0.9"
hex = "0.4.3"
log = "0.4.20"
serde = "1.0.186"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = "1.32.0"
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"
url = "2.4.0"
